// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Status /> should render correctly 1`] = `
<Status__Container
  bgColor="#707070"
  bsStyle="default"
>
  My Status
</Status__Container>
`;

exports[`<Status /> should render correctly with other bgColor 1`] = `
<Status__Container
  bgColor="#dc3545"
  bsStyle="danger"
>
  My Status
</Status__Container>
`;
